--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,10 @@
         "48": "images/logo-48.png",
         "128": "images/logo-128.png"
     },
+    "background": {
+      "service_worker": "background/background.js",
+      "type": "module"
+    },
     "content_scripts": [
     {
       "js": ["scripts/content.js"],
